# LLM-Evals

./: .gitignore  README.md  main.py  pyproject.toml
datasets/: regression_v1.json
examples/: example.py
src/datasets/: sample.py
src/llm_evals/datasets/: loader.py  results.py
src/llm_evals/evaluators/: base.py  heuristic.py  judge.py  rag.py  structure.py
src/llm_evals/reporters/: cost.py  summary.py
src/llm_evals/runner/: pipeline.py
src/runner/: evaluate_format.py  evaluate_judge.py  runner.py
